--- a/apps/services/Cargo.toml
+++ b/apps/services/Cargo.toml
@@ -7,5 +7,6 @@ resolver = "2"
 [workspace.dependencies]
 anyhow = "1"
 chrono = { version = "0.4", features = ["serde", "clock"] }
-sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
+sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid", "macros", "chrono" ] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+uuid = { version = "1", features = ["serde", "v4", "v7"] }
