--- a/apps/services/Cargo.toml
+++ b/apps/services/Cargo.toml
@@ -7,6 +7,8 @@ resolver = "2"
 [workspace.dependencies]
 anyhow = "1"
 chrono = { version = "0.4", features = ["serde", "clock"] }
+env_logger = "0.11"
+serde_json = "1"
 sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid", "macros", "chrono" ] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 uuid = { version = "1", features = ["serde", "v4", "v7"] }
