--- a/apps/services/Cargo.toml
+++ b/apps/services/Cargo.toml
@@ -6,9 +6,11 @@ resolver = "2"
 
 [workspace.dependencies]
 anyhow = "1"
+bit-vec = "0.6"
 chrono = { version = "0.4", features = ["serde", "clock"] }
 env_logger = "0.11"
+rust_decimal = "1.36.0"
 serde_json = "1"
-sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid", "macros", "chrono" ] }
+sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid", "macros", "chrono", "rust_decimal", "bit-vec", "ipnetwork", "mac_address", "time"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 uuid = { version = "1", features = ["serde", "v4", "v7"] }
