--- a/apps/services/sample_sqlx/Cargo.toml
+++ b/apps/services/sample_sqlx/Cargo.toml
@@ -5,9 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = { workspace = true }
-chrono = { workspace = true }
+common = { path = "../crates/common" }
 env_logger = { workspace = true }
-serde_json = { workspace = true }
 sqlx = { workspace = true }
 tokio = { workspace = true }
-uuid = { workspace = true }
