--- a/apps/services/crates/common/Cargo.toml
+++ b/apps/services/crates/common/Cargo.toml
@@ -10,3 +10,7 @@ rust_decimal = { workspace = true }
 serde_json = { workspace = true }
 sqlx = { workspace = true }
 uuid = { workspace = true }
+
+[dev-dependencies]
+anyhow = { workspace = true }
+tokio = { workspace = true }
