--- a/apps/services/Cargo.toml
+++ b/apps/services/Cargo.toml
@@ -16,5 +16,6 @@ rust_decimal = "1.36.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid", "macros", "chrono", "rust_decimal", "bit-vec", "ipnetwork", "mac_address", "time"] }
+strum = { version = "0.26", features = ["derive"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
 uuid = { version = "1", features = ["serde", "v4", "v7"] }
