--- a/apps/services/crates/common/Cargo.toml
+++ b/apps/services/crates/common/Cargo.toml
@@ -7,9 +7,12 @@ edition = "2021"
 bit-vec = { workspace = true }
 chrono = { workspace = true }
 rust_decimal = { workspace = true }
+serde = { workspace = true }
 serde_json = { workspace = true }
 sqlx = { workspace = true }
+thiserror = { workspace = true }
 uuid = { workspace = true }
+
 
 [dev-dependencies]
 anyhow = { workspace = true }
