--- a/apps/services/crates/postgresql/Cargo.toml
+++ b/apps/services/crates/postgresql/Cargo.toml
@@ -6,8 +6,13 @@ edition = "2021"
 [dependencies]
 chrono = { workspace = true }
 common = { path = "../common" }
+env_logger = { workspace = true }
 derive_builder = { workspace = true }
 serde = { workspace = true }
 sqlx = { workspace = true }
 strum = { workspace = true }
 uuid = { workspace = true }
+
+[dev-dependencies]
+anyhow = { workspace = true }
+tokio = { workspace = true }
