--- a/apps/services/Cargo.toml
+++ b/apps/services/Cargo.toml
@@ -11,6 +11,7 @@ chrono = { version = "0.4", features = ["serde", "clock"] }
 env_logger = "0.11"
 derive_builder = "0.20.2"
 mockito = "1.6.0"
+rand = "0.8.5"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
 rust_decimal = "1.36.0"
 serde = { version = "1", features = ["derive"] }
@@ -19,4 +20,6 @@ sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid", "mac
 strum = { version = "0.26", features = ["derive"] }
 thiserror = "2.0.3"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
+unicode-normalization = "0.1.24"
+unicode-segmentation = "1.12.0"
 uuid = { version = "1", features = ["serde", "v4", "v7"] }
