--- a/apps/services/Cargo.toml
+++ b/apps/services/Cargo.toml
@@ -5,9 +5,11 @@ members = ["sample_sqlx", "crates/*"]
 resolver = "2"
 
 [workspace.dependencies]
+aes = "0.8.4"
 anyhow = "1"
 bit-vec = "0.6"
 chrono = { version = "0.4", features = ["serde", "clock"] }
+ctr = "0.9.2"
 env_logger = "0.11"
 derive_builder = "0.20.2"
 mockito = "1.6.0"
