--- a/apps/services/crates/common/Cargo.toml
+++ b/apps/services/crates/common/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-aes = { workspace = true }
+base64 = { workspace = true }
 bit-vec = { workspace = true }
-ctr = { workspace = true }
+chacha20poly1305 = { workspace = true }
 chrono = { workspace = true }
 rand = { workspace = true }
 rust_decimal = { workspace = true }
