--- a/apps/services/Cargo.toml
+++ b/apps/services/Cargo.toml
@@ -12,6 +12,7 @@ chacha20poly1305 = {version = "0.10.1", features = ["std"] }
 chrono = { version = "0.4", features = ["serde", "clock"] }
 env_logger = "0.11"
 derive_builder = "0.20.2"
+futures-util = "0.3.31"
 mockito = "1.6.0"
 rand = "0.8.5"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
