--- a/apps/services/Cargo.toml
+++ b/apps/services/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 
-members = ["sample_sqlx", "crates/*"]
+members = ["sample_sqlx", "crates/*", "sample_builder"]
 
 resolver = "2"
 
@@ -13,16 +13,16 @@ chrono = { version = "0.4", features = ["serde", "clock"] }
 env_logger = "0.11"
 derive_builder = "0.20.2"
 futures-util = "0.3.31"
-mockito = "1.6.0"
-rand = "0.8.5"
+mockito = "1.7"
+rand = "0.9"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
-rust_decimal = "1.36.0"
+rust_decimal = "1.39.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid", "macros", "chrono", "rust_decimal", "bit-vec", "ipnetwork", "mac_address", "time"] }
-strum = { version = "0.26", features = ["derive"] }
-thiserror = "2.0.3"
+strum = { version = "0.27", features = ["derive"] }
+thiserror = "2"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
-unicode-normalization = "0.1.24"
-unicode-segmentation = "1.12.0"
+unicode-normalization = "0.1"
+unicode-segmentation = "1.12"
 uuid = { version = "1", features = ["serde", "v4", "v7"] }
