--- a/apps/services/Cargo.toml
+++ b/apps/services/Cargo.toml
@@ -19,6 +19,7 @@ reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-feature
 rust_decimal = "1.39.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+sql_query_builder = { version = "2.5", features = ["postgresql"] }
 sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid", "macros", "chrono", "rust_decimal", "bit-vec", "ipnetwork", "mac_address", "time"] }
 strum = { version = "0.27", features = ["derive"] }
 thiserror = "2"
