--- a/apps/services/sample_builder/Cargo.toml
+++ b/apps/services/sample_builder/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = { workspace = true }
+env_logger = { workspace = true }
+serde_json = { workspace = true }
+sql_query_builder = { workspace = true }
+sqlx = { workspace = true }
+tokio = { workspace = true }
+
