--- a/apps/services/sample_builder/Cargo.toml
+++ b/apps/services/sample_builder/Cargo.toml
@@ -5,9 +5,10 @@ edition = "2024"
 
 [dependencies]
 anyhow = { workspace = true }
+chrono = { workspace = true }
 env_logger = { workspace = true }
 serde_json = { workspace = true }
 sql_query_builder = { workspace = true }
 sqlx = { workspace = true }
 tokio = { workspace = true }
-
+uuid = { workspace = true }
