--- a/apps/services/Cargo.toml
+++ b/apps/services/Cargo.toml
@@ -15,6 +15,7 @@ derive_builder = "0.20.2"
 futures-util = "0.3.31"
 mockito = "1.7"
 rand = "0.9"
+regex = "1.12.2"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
 rust_decimal = "1.39.0"
 serde = { version = "1", features = ["derive"] }
