--- a/apps/services/sample_builder/Cargo.toml
+++ b/apps/services/sample_builder/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 anyhow = { workspace = true }
 chrono = { workspace = true }
 env_logger = { workspace = true }
+postgresql = { path = "../crates/postgresql" }
 serde_json = { workspace = true }
 sql_query_builder = { workspace = true }
 sqlx = { workspace = true }
